--- a/APITester.WebAPI/appsettings.json
+++ b/APITester.WebAPI/appsettings.json
@@ -10,6 +10,9 @@
       "LogLevel": {
         "Default": "Warning"
       }
+    },
+    "ConnectionStrings": {
+      "ApiTesterDB": "Data Source=localhost;Initial Catalog=APITester;Integrated Security=True"
     }
   }
 }
